--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -13,5 +13,5 @@ Resources:
       Timeout: 120
       Code:
         ZipFile: |
-          exports.handler = function (event, context) { context.succeed('hello world');
-          };
+          exports.handler = async (event) => {console.log(event);return 'Hello from Lambda!';};
+      Role: arn:aws:iam::063031425366:role/LambdaRole
