--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -14,4 +14,4 @@ Resources:
       Code:
         ZipFile: |
           exports.handler = async (event) => {console.log(event);return 'Hello from Lambda!';};
-      Role: arn:aws:iam::063031425366:role/LambdaTest
+      Role: arn:aws:iam::121511844673:role/offline_cloudformation_role
