Add Layers to CF

--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -5,8 +5,8 @@ Resources:
   TestLayer:
     Type: AWS::Lambda::LayerVersion
     Properties:
-      CompatibleRunTimes:
-        - nodejs16.16.0
+      CompatibleRuntimes:
+        - nodejs16.x
       LayerName: arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3
   TestLambda:
     Type: AWS::Lambda::Function
