--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -2,12 +2,6 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: "Template for Lambda Deploy"
 
 Resources:
-  TestLayer:
-    Type: AWS::Lambda::LayerVersion
-    Properties:
-      CompatibleRuntimes:
-        - nodejs16.x
-      LayerName: arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3
   TestLambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -22,4 +16,4 @@ Resources:
           exports.handler = async (event) => {console.log(event);return 'Hello from Lambda!';};
       Role: arn:aws:iam::121511844673:role/offline_lambda_role
       Layers:
-        - !Ref TestLayer
+        - Arn: 'arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3'
