--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -16,4 +16,4 @@ Resources:
           exports.handler = async (event) => {console.log(event);return 'Hello from Lambda!';};
       Role: arn:aws:iam::121511844673:role/offline_lambda_role
       Layers:
-        - Arn: 'arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3'
+        - 'arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3'
