Add S3 to get Code Zip

--- a/lambda-test-cf.yml
+++ b/lambda-test-cf.yml
@@ -12,24 +12,8 @@ Resources:
       MemorySize: 512
       Timeout: 120
       Code:
-        ZipFile: |
-          const { MongoClient } = require("mongodb");
-
-          exports.handler = async (event) => {
-          const filter = {
-            'orderNumber': '123'
-          };
-          const client = await MongoClient.connect(
-            'mongodb+srv://btanneru:Bhani4chinni@dev0.aar2e.mongodb.net/test?authSource=admin&replicaSet=dev0-shard-0&readPreference=primary&ssl=true',
-            { useNewUrlParser: true, useUnifiedTopology: true }
-          );
-          const coll = client.db('smartCell_Commons').collection('order');
-          const cursor = coll.find(filter);
-          const result = await cursor.toArray();
-          console.log(`result:: ${result}`);
-          await client.close();
-          return result;
-          };
+        S3Bucket: codepipeline-us-east-2-544458937886
+        S3Key: TestLambda/SourceArti/876EiwE
       Role: arn:aws:iam::121511844673:role/offline_lambda_role
       Layers:
         - 'arn:aws:lambda:us-east-2:121511844673:layer:mongodb:3'
